css/shapes-purple.css
/* ... */
@media (max-width: 479px) {

#main-nav .navbar-brand span{
    display:none;
}

.jumbotron .header-logo{
    width:50px;
}

.jumbotron .first-line p{
    font-size:24px;
    line-height:28px;
}

.jumbotron .second-line p{
    font-size:28px;
    line-height:36px;
}

h1.section-title{
    font-size:32px;
    line-height:46px;
    top:-25px;
}

.section-header .lead{
    font-size:18px;
    line-height:24px;
}

p {
    font-size:16px;
    line-height:21px;
}

.btn-theme{
	padding:15px 40px;
	font-size:18px;
}

#filter-works ul li a{
    font-size:11px;
    padding:7px 10px;
}

#contact .form-control {
    height:58px;
    font-size:18px;
    line-height:24px;
}

#contact textarea.form-control {
    font-size:18px;
    line-height:24px;
	padding-top:14px;
}

}

